k8s/home-finder-process-property-workers-production.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "gonitely-home-finder-property-worker"
  namespace: "production"
  labels:
    app: "gonitely-home-finder-property-worker"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "gonitely-home-finder-property-worker"
  template:
    metadata:
      labels:
        app: "gonitely-home-finder-property-worker"
    spec:
      containers:
      - name: "gonitely-home-finder-property-worker"
        image: "gcr.io/gonitely-203718/gonitely-home-finder-workers:latest"
