k8s/home-finder-production.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: gonitely-home-finder-service
  namespace: "production"
spec:
  selector:
    app: gonitely-home-finder
  ports:
  - name: 80-to-3000-tcp
    protocol: TCP
    port: 80
    targetPort: 3000
  - name: 8080-to-3001-tcp
    protocol: TCP
    port: 8080
    targetPort: 3001
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "gonitely-home-finder"
  namespace: "production"
  labels:
    app: "gonitely-home-finder"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "gonitely-home-finder"
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "gonitely-home-finder"
    spec:
      containers:
      - name: "gonitely-home-finder-api"
        image: "gcr.io/gonitely-203718/gonitely-home-finder-api:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 3001
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
      - name: "gonitely-home-finder-ui"
        image: "gcr.io/gonitely-203718/gonitely-home-finder-ui:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
